--- a/_config.yml
+++ b/_config.yml
@@ -142,7 +142,8 @@ plugins:
   - jekyll-twitter-plugin
   - jekyll-sitemap
   - jemoji
-
+  - jekyll-redirect-from
+  
 # Extras
 github: [metadata]
 
