--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ title: Hun Namkung # the website title (if blank, full name will be used instead
 first_name: Hun
 middle_name:
 last_name: Namkung
-email: hnamkung@andrew.cmu.edu
+email: hnamkung15@gmail.com
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
   A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: >
